manifests/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: auth-node-app15
  labels:
    app: auth-node-app15
    argocd/app-name: auth-node-app15
    argocd/app-selector: auth-node-app15
    backstage.io/kubernetes-id: auth-node-app15
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-node-app15
  template:
    metadata:
      labels:
        app: auth-node-app15
        app.kubernetes.io/component: backstage
        backstage.io/kubernetes-id: demo-prod
        argocd.argoproj.io/instance: auth-node-app15
        argocd/app-name: auth-node-app15
        argocd/app-selector: auth-node-app15
    spec:
      containers:
        - name: auth-node-app15
          image: image-registry.openshift-image-registry.svc:5000/demo-prod/auth-node-app15:latest
          ports:
            - name: http-3000
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
            requests:
              cpu: '100m'
              memory: '256Mi'
