manifests/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: auth-node-app15
  labels:
    app: auth-node-app15
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: demo-prod
    argocd.argoproj.io/instance: auth-node-app15
    argocd/app-name: auth-node-app15
    argocd/app-selector: auth-node-app15
spec:
  ports:
    - name: http-3000
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: auth-node-app15
